# ocalc

./: LICENSE  Makefile  README.md  calc.opam  calc_test.opam
src/: calc.ml  calc_lexer.ml  calc_parser.ml  display.ml  dune  lexer.ml  parser.ml  tree.ml
tests/: calc_expr.ml  calc_test.ml  dune  random_expr.ml
