
opam-version: "2.0"
author:       "Akanksha Mathur"
maintainer:   "velter@gmail.com"
homepage:     "https://github.com/minishrink/ocalc"
dev-repo:     "https://github.com/minishrink/ocalc.git"
bug-reports:  "https://github.com/minishrink/ocalc/issues"
license:      "MIT"
doc:          "https://github.com/minishrink/ocalc/tree/parser/README.md"

depends:
  [ "dune"
  ]

available: [ocaml-version >= "4.05.0"]
